tests/errors/unknown-escaped-char.p8
/ This program produces an unknown escaped character error.

ERRCHAR,    '\z'
$
